kubernetes/production.db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: workout-tracker
  labels:
    name: mongodb
    env: productions
    app: workout-tracker

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - image: mongo:5.0.7
          name: mongodb-server
          ports:
            - containerPort: 27017
              name: mongodb
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.2"
              memory: "200Mi"
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
            - name: mongodb-config
              mountPath: /data/configdb
            - name: mongo-init
              mountPath: /docker-entrypoint-initdb.d/
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongodb-data-volume
        - name: mongodb-config
          persistentVolumeClaim:
            claimName: mongodb-config-volume
        - name: mongo-init
          configMap:
            name: mongodb-initial-config

---
apiVersion: v1
kind: Service
metadata:
  namespace: workout-tracker
  name: mongodb
spec:
  ports:
    - port: 27017
  selector:
    app: mongodb
  clusterIP: None
