kubernetes/development.webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-webapp-deployment
  namespace: workout-tracker
  labels:
    name: webapp-dev
    env: development
    app: workout-tracker-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-dev
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webapp-dev
    spec:
      containers:
        - image: ghcr.io/silte/workout-tracker:latest-dev
          name: webapp-dev
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "0.2"
              memory: "200Mi"
            requests:
              cpu: "0.002"
              memory: "30Mi"
          ports:
            - containerPort: 4000
              name: webapp-dev
          livenessProbe:
            httpGet:
              path: /health-check/ping
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health-check/ping
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  namespace: workout-tracker
  name: workout-tracker-dev
  labels:
    app: workout-tracker-dev
spec:
  ports:
    - port: 80
      targetPort: 4000
  selector:
    app: webapp-dev

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workout-tracker-dev
  namespace: workout-tracker
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: workout-dev.silte.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workout-tracker-dev
                port:
                  number: 80
