kubernetes/production.webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: workout-tracker
  labels:
    name: webapp
    env: productions
    app: workout-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - image: ghcr.io/silte/workout-tracker:latest
          name: webapp
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
            requests:
              cpu: "0.1"
              memory: "100Mi"
          ports:
            - containerPort: 4000
              name: webapp
          livenessProbe:
            httpGet:
              path: /health-check/ping
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health-check/ping
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: workout-data
              mountPath: /app/data
      volumes:
        - name: workout-data
          persistentVolumeClaim:
            claimName: webapp-data-volume

---
apiVersion: v1
kind: Service
metadata:
  namespace: workout-tracker
  name: workout-tracker
  labels:
    app: workout-tracker
spec:
  ports:
    - port: 80
      targetPort: 4000
  selector:
    app: webapp

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workout-tracker
  namespace: workout-tracker
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: workout.silte.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workout-tracker
                port:
                  number: 80
